--- a/nivel1/estilo.css
+++ b/nivel1/estilo.css
@@ -4,13 +4,15 @@
     font: 120% monospace;
     display: flex;
     flex-direction: column;
+    grid-row-gap: 0.5em;
 }
 
 #cabecera{
     color: #ea5455;
     background-color: #2d4059;
     height:20%;
-    border-bottom: 5px solid black;
+    border-bottom: 10px solid black;
+    
 }
 
 #columna1{
@@ -29,7 +31,7 @@
     color: #fed460;
     height:20%;
     background-color: #f07b3f;
-    border-top: 5px solid black;
+    border-top: 10px solid black;
     border-bottom: 10px solid black;
 }
 #izquierda{
@@ -47,7 +49,7 @@
     background-color:#f73f52;
     float:right;
     width:30%;
-    border-bottom: 5px solid black;
+    border-bottom: 10px solid black;
 
 
 }
@@ -55,5 +57,5 @@
     height:10%;
     background-color:#e6af2e;
     clear:both;
-    border-top: 5px solid black;
+    border-top: 10px solid black;
 }
