ultimo cambio antes de break

--- a/nivel1/miercoles16/styles.css
+++ b/nivel1/miercoles16/styles.css
@@ -65,24 +65,25 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    align-content: center;
-    
-  }
+}
+
+
   
   .contenedor3 > div:nth-child(1) {
     width: 70%;
     color: #ea5455;
   background-color: #2d4059;
+  border-right: 5px solid black;
 }
 
 .contenedor3 > div:nth-child(2) {
     width: 30%;
     color: #2d4059;
   background-color: #f73f52;
+  border-left: 5px solid black;
 }
 
-
-
+ 
 .contenedor4 {
     background: white;
     border: 10px solid black;
