--- a/nivel1/miercoles16/estilopag1.css
+++ b/nivel1/miercoles16/estilopag1.css
@@ -5,48 +5,71 @@
 }
 
 .padre{
-
+    display: flex;
+    flex-flow: column nowrap;
 }
 
     .header{
         background: #000;
+        display: flex;
+        flex-flow: column nowrap;
     }
         .menu{
             background: #2d4059;
+            display: flex;
+            flex-flow: row nowrap;
+            height: 100px;
+            align-items: center;
         }
             .logo{
             background: #ea5455;
+            flex: 1 1 auto;
+            height: 30px;
+
             }
             .nav{
                 background: #ea5455;
+                flex: 5 1 auto;
+                height: 30px;
             }
             .social{
                 background: #ea5455;
+                flex: 1 1 auto;
+                height: 30px;
             }
+
         .texto-principal{
             background: #f07b3f;
         }
             h1{
                 background: #ffd460;
+                text-align: center;
             }
 
 
 
     .section{
         background: #000;
+        display: flex;
     }
-
         .articulos{
             background: #4e4e6a;
+            flex: 2 1 auto;
+            display: flex;
+            flex-flow: row wrap;
         }
             .article{
                 background: #1f6cb0;
+                flex: 1 1 40%;
+
             }
             .navegacion{
                 background: #70a3c4;
+                flex: 1 1 100%;
             }
         .aside{
             background: #f73f52;
+            
         }
             .publicidad{
                 background: #ffea85;
