--- a/nivel1/exercici1/estilopag1.css
+++ b/nivel1/exercici1/estilopag1.css
@@ -13,6 +13,7 @@
         background: #000;
         display: flex;
         flex-flow: column nowrap;
+        text-align: center;
     }
         .menu{
             background: #2d4059;
@@ -51,6 +52,7 @@
     .section{
         background: #000;
         display: flex;
+        text-align: center;
     }
         .articulos{
             background: #4e4e6a;
