Agrego max width de 1200 px como pide consigna

--- a/nivel1/exercici1/estilopag1.css
+++ b/nivel1/exercici1/estilopag1.css
@@ -1,8 +1,16 @@
+/* NIVEL 1. EJERCICIO 1 */
 *{
     margin:10px;
     padding: 10px;
     box-sizing: border-box;
+    max-width: 1200px
 }
+
+/*@media only screen and (max-width: 1200px) {
+    * {
+      background-color: lightblue;
+    }
+  }*/
 
 .container{
     display: flex;
@@ -84,3 +92,6 @@
         .pie-pagina{
             background: #e6af2e;
         }
+
+/* NIVEL 1. EJERCICIO 2 */
+
