agrega detalles y text html

--- a/nivel2/estilo.css
+++ b/nivel2/estilo.css
@@ -1,95 +1,128 @@
-*{
-    margin:10px;
-    padding: 10px;
-    box-sizing: border-box;
-    font-family: 'Raleway', sans-serif;
-
+* {
+  margin: 0px;
+  padding: 10px;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
 }
 
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
-.container{
-    display: flex;
-    flex-flow: column nowrap;
+.container {
+  display: flex;
+  flex-flow: column nowrap;
 }
 
-    .header{
-        background: url(../nivel2/images/header.jpg);
-        background-position: center;
-        background-attachment: contain;
-        background-size: cover;
-        display: flex;
-        flex-flow: column nowrap;
-        text-align: center;
-    }
-        .menuprincipal{
-            background: rgba(0,0,0,0.05);
-            display: flex;
-            flex-flow: row nowrap;
-            height: 100px;
-            align-items: flex-end;
-        }
-            .logo{
-                flex: 1 1 auto;
-                color: #fff;
+.header {
+  background: url(../nivel2/images/header.jpg);
+  background-position: center;
+  background-attachment: contain;
+  background-size: cover;
+  display: flex;
+  flex-flow: column nowrap;
+  text-align: center;
+  justify-content: space-between;
+}
+.menuprincipal {
+  background: rgba(0, 0, 0, 0.05);
+  display: flex;
+  flex-flow: row nowrap;
+  height: 100px;
+  align-items: flex-end;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+}
+.logo {
+  flex: 1 1 auto;
+}
 
-            }
-            .nav{    
-                flex: 5 1 auto;
+.logo img {
+  max-width: 50%;
+  max-height: 50%;
+}
 
-            }
-            .social{
-                
-                flex: 1 1 auto;
-                                
-            }
+.logo a {
+  color: #8c8c8c;
+}
 
-        .texto-principal{
-            background: #f07b3f;
-        }
-            h1{
-                background: #ffd460;
-                text-align: center;
-            }
+.logo a:hover {
+  color: #343434;
+}
 
+.nav {
+  flex: 5 1 auto;
+  display: flex;
+}
+.nav a {
+  color: #8c8c8c;
+  font-size: 11 px;
+  text-transform: uppercase;
+  padding: 0 10px;
+  letter-spacing: 2px;
+}
 
+.nav a:hover {
+  color: #343434;
+}
+.social {
+  flex: 1 1 auto;
+  display: flex;
+}
 
-    .section{
-        background: #000;
-        display: flex;
-        text-align: center;
-    }
-        .articulos{
-            background: #4e4e6a;
-            flex: 2 1 auto;
-            display: flex;
-            flex-flow: row wrap;
-        }
-            .article{
-                background: #1f6cb0;
-                flex: 1 1 40%;
+.social a {
+  font-size: 18px;
+  color: #8c8c8c;
+  padding: 0 5px;
+}
 
-            }
-            .navegacion{
-                background: #70a3c4;
-                flex: 1 1 100%;
-            }
-        .aside{
-            background: #f73f52;
-            
-        }
-            .texto-aside{
-                background: #ffea85;
-            }
+.social a:hover {
+  color: #343434;
+}
 
-    .footer{
-        background: #000;
-        text-align: center;
-    }
-        .pie-pagina{
-            background: #e6af2e;
-        }
+.texto-principal {
+  /*background: #f07b3f;*/
+}
+h1 {
+  font-family: "Montserrat", sans-serif;
+  font-size: 21px;
+  color: #f08080;
+  font-weight: 300;
+  text-align: center;
+  line-height: 1.6;
+}
+
+.section {
+  background: #000;
+  display: flex;
+  text-align: center;
+}
+.articulos {
+  background: #4e4e6a;
+  flex: 2 1 auto;
+  display: flex;
+  flex-flow: row wrap;
+}
+.article {
+  background: #1f6cb0;
+  flex: 1 1 40%;
+}
+.navegacion {
+  background: #70a3c4;
+  flex: 1 1 100%;
+}
+.aside {
+  background: #f73f52;
+}
+.texto-aside {
+  background: #ffea85;
+}
+
+.footer {
+  background: #000;
+  text-align: center;
+}
+.pie-pagina {
+  background: #e6af2e;
+}
 
 /*        
 @media all and (max-width: 800px) {
@@ -137,4 +170,3 @@ a{
     }
 }
 */
-
