--- a/nivel2/estilo.css
+++ b/nivel2/estilo.css
@@ -18,6 +18,7 @@ a {
 }
 
 .header {
+  height: 300px;
   background: url(../nivel2/images/header.jpg);
   background-position: center;
   background-attachment: contain;
@@ -26,6 +27,14 @@ a {
   flex-flow: column nowrap;
   text-align: center;
   justify-content: space-between;
+
+  
+}
+
+.header img {
+  max-width: 100%;
+  max-height: 100%;
+
 }
 .menuprincipal {
   background: rgba(0, 0, 0, 0.05);
@@ -38,14 +47,17 @@ a {
 }
 .logo {
   flex: 1 1 auto;
-  /* flex-shrink: inherit;*/
+
 }
 
 .logo img {
-  max-width: 35%;
-  max-height: 35%;
-  min-width: 10%;
-  min-height: 10%;
+  display: flex;
+  /*margin-left: auto;*/
+  margin-right: auto;
+  margin-left: auto;
+
+  max-width: 27%;
+  max-height: 27%;
 }
 
 .logo a {
@@ -66,6 +78,9 @@ a {
   text-transform: uppercase;
   padding: 0 10px;
   letter-spacing: 2px;
+  margin-left: auto;
+  margin-right: auto;
+
 }
 
 .nav a:hover {
@@ -74,12 +89,16 @@ a {
 .social {
   flex: 1 1 auto;
   display: flex;
+  
+  
 }
 
 .social a {
   font-size: 18px;
   color: #8c8c8c;
   padding: 0 5px;
+ 
+
 }
 
 .social a:hover {
@@ -87,12 +106,11 @@ a {
 }
 
 .texto-principal {
-  /*background: #f07b3f;*/
   height: 580 px;
 }
 h1 {
   font-family: "Montserrat", sans-serif;
-  font-size: 28px;
+  font-size: 32px;
   color: #f08080;
   font-weight: 700;
   text-align: center;
@@ -120,8 +138,6 @@ h1 {
 }
 
 .article img {
-  /*max-width: 100%;
-  max-height: 100%;*/
   width: 100%
 }
 
@@ -165,13 +181,13 @@ h2 {
 }
 
 .aside {
-  /*background: #f73f52;*/
+
   flex: 1 1 auto;
   margin: 10px 5px 10px 0;
 }
 
 h4 {
-  /*background: #000;*/
+
   color: black;
   text-align: center;
   padding: 10px;
