--- a/nivel2/estilo.css
+++ b/nivel2/estilo.css
@@ -37,12 +37,12 @@ a {
 
 }
 .menuprincipal {
-  background: #0000000d;
+  /*background: #0000000d;*/
   display: flex;
   flex-flow: row nowrap;
   height: 100px;
   align-items: center;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  /*border-bottom: 1px solid rgba(255, 255, 255, 0.5);*/
   
 }
 .logo {
@@ -105,7 +105,14 @@ a {
 }
 
 .texto-principal {
-  height: 580 px;
+  height: 30%;
+  margin-left: 30px;
+  margin-right: 30px;
+  background: rgba(34,34,34,0.75);
+  background-color: rgba(0,0,0,0.1)
+
+
+
 }
 h1 {
   font-family: "Montserrat", sans-serif;
@@ -194,6 +201,7 @@ h4 {
   text-align: center;
   padding: 10px;
   font-size: small;
+  font-weight: light;
 }
 /*.texto-aside {
   background: #ffea85;
@@ -203,7 +211,9 @@ h4 {
   background: #ececec;
   text-align: center;
   margin-top: 5px;
-  ;
+  margin-left: 0.5px;
+  margin-right: 0.5px;
+  
   
 }
 .pie-pagina {
