--- a/nivel2/estilo.css
+++ b/nivel2/estilo.css
@@ -53,10 +53,7 @@ a {
 
 .logo img {
   display: flex;
-  /*margin-left: auto;*/
-  margin-right: auto;
-  margin-left: auto;
-
+  margin: auto;
   max-width: 27%;
   max-height: 27%;
 }
