--- a/nivel2/estilo.css
+++ b/nivel2/estilo.css
@@ -103,7 +103,7 @@ a {
 h1 {
   font-family: "Montserrat", sans-serif;
   font-size: 32px;
-  color: #f08080;
+  color: #f59c7b /* #f08080*/;
   font-weight: 700;
   text-align: center;
   line-height: 1.6;
@@ -123,7 +123,7 @@ h1 {
 .article {
   flex: 1 1 40%;
   color: #444;
-  font-size: 13px;
+  font-size: 11px;
   letter-spacing: 1px;
   margin: 10px 10px 0 0px;
   flex: 1 1 45%;
@@ -134,11 +134,16 @@ h1 {
   width: 100%;
 }
 
+.article p {
+  column-count: 2;
+}
+
 .article a {
-  color: #fff;
-  font-size: 13px;
+  /*color: #fff;*/
+  color: #8c8c8c;
+  font-size: 12px;
   padding: 10px;
-  background: #000;
+  /*background: #000;*/
   margin: 10px 0;
   display: inline-block;
 }
