--- a/PracticasTutoriales/estilos.css
+++ b/PracticasTutoriales/estilos.css
@@ -2,23 +2,22 @@
     display: grid;
 grid-template-columns: repeat(4, 1fr);
 gap: 1em;
-grid-template-rows: minmax(100px, auto);
+grid-auto-rows: 100px     ;
 
 }
 
-.nested-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 100px;
-    gap: 1em;
+.element1 {
+
+    grid-column: 1/5;
+    grid-row: 1/3;
 
 }
 
-.nested-grid > div {
-    border: 1px solid #000;
-    background: #f1c40f;
-    padding: 1em;
+.element2 {
+    grid-column: 1/4;
 }
+
+
 
 .grid > div {
     background: #ecf0f1;
