--- a/nivel2/estilo.css
+++ b/nivel2/estilo.css
@@ -95,13 +95,14 @@ a {
 }
 
 .texto-principal {
-  height: 30%;
+  height: 35%;
   margin: 30px 30px 0;
   border-radius: 5px 5px 0px 0px; /*Agrego bordes redondeados superiores en el recuadro
     Se agrega transparencia al texto principal*/
   background: rgba(34, 34, 34, 0.75);
   background-color: rgba(0, 0, 0, 0.1);
   animation: moverIzquierda 4s ease-in;
+  
   
 }
 
@@ -116,39 +117,9 @@ h1 {
   letter-spacing: 1px;
   text-align: center;
 
- /* padding: 100px 200px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  border-radius: 20px;*/
 
-  /*
-  display: inline;
-  position: relative;
-  font: 32px Helvetica, Sans-Serif;
-  letter-spacing: 1px;
-  color: #f59c7b;*/
 }
-
-/*  font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif;;
-  text-transform: uppercase;
-  display: block;
-  font-size: 92px;
-  color: #f1ebe5;
-  text-shadow: 0 8px 9px #c4b59d, 0px -2px 1px #fff;
-  font-weight: bold;
-  letter-spacing: -4px;
-  text-align: center;
-  background: linear-gradient(to bottom, #ece4d9 0%,#e9dfd1 100%);
-  position: absolute;
-  padding: 100px 200px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  border-radius: 20px;
-
-
-
+/*
 h1 {
   font-family: "Montserrat", sans-serif;
   font-size: 32px;
@@ -180,6 +151,7 @@ h1 {
   margin: 10px 10px 0 0px;
   flex: 1 1 45%;
   background: #ececec;
+
 }
 
 .article img {
@@ -198,6 +170,7 @@ h1 {
   /*background: #000;*/
   margin: 10px 0;
   display: inline-block;
+  
 }
 
 .article a:hover {
@@ -271,6 +244,7 @@ h4 {
   }
   
 }
+
 @media all and (max-width: 800px) {
         .section{
             flex-direction: column;
@@ -313,5 +287,9 @@ h4 {
 @media all and (max-width: 400px){
     .aside{
         flex-direction: column;
+    }
+
+    .texto-principal{
+      height: 100%;
     }
 }
