--- a/nivel1/exercici1/estilo1200.css
+++ b/nivel1/exercici1/estilo1200.css
@@ -3,7 +3,7 @@
     margin:10px;
     padding: 10px;
     box-sizing: border-box;
-    max-width: 1200px
+    /*max-width: 1200px*/
 }
 
 .container{
