--- a/niveles2_3/estilo.css
+++ b/niveles2_3/estilo.css
@@ -19,16 +19,18 @@ a {
 
 .header {
   height: 300px;
-  background: url(../nivel2/images/header.jpg);
-  background-position: center;
+  background: url(../niveles2_3/images/header.jpg);
+  background-position: center; 
   background-attachment: contain;
   background-size: cover;
+  position: relative;
   display: flex;
   flex-flow: column nowrap;
   text-align: center;
   justify-content: space-between;
   margin-bottom: 10px;
-}
+  height: 400px;
+ }
 
 .header img {
   max-width: 100%;
@@ -38,8 +40,8 @@ a {
   display: flex;
   flex-flow: row nowrap;
   height: 100px;
-  align-items: center;
-}
+  align-items: bottom;
+} /*corregir loco y posicion del menu principal */
 
 .logo {
   flex: 1 1 auto;
@@ -48,8 +50,9 @@ a {
 .logo img {
   display: flex;
   margin: auto;
-  max-width: 27%;
-  max-height: 27%;
+  max-width: 80%;
+  max-height: 80%;
+  position: relative;
 }
 
 .logo a {
@@ -250,6 +253,12 @@ h4 {
 
 
 @media all and (max-width: 400px){
+    .header {
+  
+      background-position: top center; 
+
+    }
+
     .aside{
         flex-direction: column;
     }
